Atualizando versão com AWS SAM

--- a/template.yaml
+++ b/template.yaml
@@ -11,33 +11,33 @@ Globals:
     Timeout: 20
 
 Resources:
-  HelloWorldFunction:
+  SpringbootAwsLambdaFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: HelloWorldFunction
-      Handler: helloworld.App::handleRequest
+      CodeUri: springboot-aws-lambda
+      Handler: dev.alexandreyoshimatsu.Handler::handleRequest
       Runtime: java8
-      MemorySize: 512
+      MemorySize: 128
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables:
-          PARAM1: VALUE
+          FUNCTION_NAME: orders
       Events:
-        HelloWorld:
+        SpringbootAwsLambda:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /hello
+            Path: /SpringbootAwsLambdaApi
             Method: get
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldApi:
-    Description: "API Gateway endpoint URL for Prod stage for Hello World function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
-    Description: "Hello World Lambda Function ARN"
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: "Implicit IAM Role created for Hello World function"
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+  SpringbootAwsLambdaApi:
+    Description: "API Gateway endpoint URL for Prod stage for Springboot Aws Lambda function"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/SpringbootAwsLambdaApi/"
+  SpringbootAwsLambdaFunction:
+    Description: "Springboot Aws Lambda Function ARN"
+    Value: !GetAtt SpringbootAwsLambdaFunction.Arn
+  SpringbootAwsLambdaFunctionIamRole:
+    Description: "Implicit IAM Role created for Springboot Aws Lambda function"
+    Value: !GetAtt SpringbootAwsLambdaFunctionRole.Arn
